[gd_scene load_steps=3 format=3]

[ext_resource path="res://src/ui/achievement_toast.gd" type="Script" id=1]

[node name="AchievementToast" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.0
offset_right = 320.0
offset_bottom = 120.0
pivot_offset = Vector2(0, 60)
script = ExtResource(1)

[node name="Background" type="Panel" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchors_preset = 15
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9

[node name="TitleLabel" type="Label" parent="Background/VBoxContainer"]
unique_name_in_owner = true
text = "Achievement Unlocked"
label_settings = null
horizontal_alignment = 0

[node name="DescriptionLabel" type="Label" parent="Background/VBoxContainer"]
unique_name_in_owner = true
autowrap_mode = 2
text = "Complete an achievement"

[node name="DisplayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

